tests/syntax_error/bad_statement.jou
def main() -> int:
    5  # Error: not a valid statement
